<resources>
    <string name="app_name">Android Season 4 with Java</string>
    <string name="E02AndroidLifeCycleActivity">Life Cycle</string>
    <string name="E03AndroidUIControlsActivity">UI Controls</string>
    <string name="sample">Sample</string>
    <string name="placeholder">Enter you text here …</string>
    <string name="newName">Hello World!</string>
    <string name="imgBtnDescription">Img Btn</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_e04_android_hex_colors">Hex Colors</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing
        and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an
        unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only f
        ive centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularise
        d in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with deskto
        p publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 150
        0s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
        not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was p
        opularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently wi
        th desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing
        and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an
        unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only f
        </string>
    <string name="E05AndroidTextViewActivity">Text View</string>
    <string name="E06AndroidButtonActivity">Button</string>
    <string name="secondButton">This is a Second Button</string>
    <string name="firstButton">This is a First Button!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="E07AndroidEventHandling">Event Handling</string>
    <string name="firstButtonE7">Start new Activity</string>
    <string name="secondButtonE7">Second Button</string>
    <string name="E07AndroidEventHandling02">Event Handling (2)</string>
    <string name="startButton">Start new Activity</string>
    <string name="finishButton">Finish</string>
    <string name="toggleColor">Toggle Color</string>
    <string name="toggleVisibility">Toggle Visibility</string>
    <string name="E08AndroidEditText">Edit Text</string>
    <string name="personName">Person Name</string>
    <string name="textPassword">Password</string>
    <string name="numberPassword">Number Password</string>
    <string name="phone">Phone</string>
    <string name="textPostalAddress">Postal Address</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="numberSigned">Number Signed</string>
    <string name="textEmailAddress">Email Address</string>
    <string name="textMultiLine">Multi Line</string>
    <string name="autoCompleteTextView">Complete Text View</string>
    <string name="multiAutoCompleteTextView">Multi Auto Complete Text View</string>
    <string name="checkedTextView">Checked Text View</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="loginText">Login</string>
    <string name="username">UserName</string>
    <string name="shortUserNameError">Username is too short!</string>
    <string name="shortPasswordError">Password is too short. (6 Characters)</string>
    <string name="welcomeLogin">Welcome %s</string>
    <string name="forgetPasswordText">It\'s your problem :))</string>
    <string name="E09AndroidImageButton">Image Button</string>
    <string name="buttonText">Camera</string>
    <string name="takePhoto">Take Photo …</string>
    <string name="E10AndroidCheckBox">Check Box</string>
    <string name="textChoseLanguage">Chose your favorite languages</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="c">C</string>
    <string name="kotlin">Kotlin</string>
    <string name="php">PHP</string>
    <string name="submit">Submit</string>
    <string name="result">You Chose this Languages: %s</string>
    <string name="spacer">, </string>
    <string name="noResponse">You didn\'t Chose Any Language…</string>
    <string name="E11AndroidRadioButton">Radio Button</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="choseSex">Select your Sex</string>
    <string name="sexMaleMessage">Your chose Male.</string>
    <string name="sexFemaleMessage">Your chose Female.</string>
    <string name="sexOtherMessage">Your chose Other.</string>
    <string name="sexNoChoseMessage">You didn\'t chose any…</string>
    <string name="E12AndroidSwitch">Switch</string>
    <string name="textSwitch">On/Off</string>
    <string name="textSwitchNight">Night Mode</string>
    <string name="backgroundWorking">Background Working</string>
    <string name="onOff">Root mode</string>
    <string name="isOn">ON</string>
    <string name="isOff">OFF</string>
    <string name="newLine">\n</string>
    <string name="E13AndroidRatingBar">Rating Bar</string>
    <string name="ratingBarQuestion">Do you like me?</string>
    <string name="rateMessage">you chose %s as Rate</string>
    <string name="E14AndroidProgressBar">Progress Bar</string>
    <string name="progressBarTitle">Circle ProgressBar</string>
    <string name="horizontalProgressBarTitle">Horizontal ProgressBar Title</string>
    <string name="indeterminateProgressBarTitle">Indeterminate ProgressBar Title</string>
    <string name="customIndeterminateProgressBarTitle">Custom Indeterminate ProgressBar Title</string>
    <string name="E15AndroidTimePicker">Time Picker</string>
    <string name="selectTimePicker">Please select Time</string>
    <string name="timeSpacer">:</string>
    <string name="timeConfirm">Tap to confirm: %s</string>
    <string name="E16AndroidDatePicker">Date Picker</string>
    <string name="selectDatePicker">Please select Date</string>
    <string name="dateSpacer">.</string>
    <string name="E17AndroidToggleButton">Toggle Button</string>
    <string name="toggleButton">Toggle Button</string>
    <string name="nightMode">Night Mode</string>
    <string name="dayMode">Day Mode</string>
    <string name="toggleButtonTitle">Activate Night MODE</string>
    <string name="nightModeActive">Night Mode Activated</string>
    <string name="nightModeDeactivate">Night Mode Deactivated</string>
    <string name="E18AndroidSeekBar">Seek Bar</string>
    <string name="seekBarAgeText">Enter your age: </string>
    <string name="E19AndroidContactBadge">Contact Badge</string>
    <string name="E20AndroidLayouts">Layouts</string>
    <string name="sendButton">Send</string>
    <string name="messageChat">Message</string>
    <string name="myAddress">Heiligenstädter Lände 15A, 1190 Wien, Austria</string>
    <string name="fullName">Full Name</string>
    <string name="address">Address</string>
    <string name="myName">Sadra B</string>
    <string name="E21AndroidFragment">Fragment</string>
    <string name="E22AndroidScrollView">Scroll View</string>
    <string name="sampleText">This is sample</string>
    <string name="serif_monospace">serif-monospace</string>
    <string name="goToTop">^</string>
    <string name="E23AndroidWebView">Web View</string>
    <string name="urlHere">URL …</string>
    <string name="E24AndroidVideoView">Video View</string>
    <string name="grantAccess">Please allow Read permission in App setting</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="E25AndroidSpinner">Spinner</string>
    <string name="resultLang">%s is Selected.</string>
    <string name="selectRequire">select something…</string>
    <string-array name="programmingLanguages">
        <item>Java</item>
        <item>Python</item>
        <item>C</item>
        <item>Kotlin</item>
        <item>PHP</item>
    </string-array>
    <string name="E26AndroidNavigation">Navigation</string>
    <string name="navigateToButton">Navigate to Android Button</string>
    <string name="navigate">Navigate</string>
    <string name="enterData">Enter some Data</string>
    <string name="E26AndroidNavigationTarget">Target</string>
    <string name="intentData">we received [%s] from other Activity</string>
    <string name="noContent">There is No Data!</string>
    <string name="morning">Goog morning</string>
    <string name="afternoon">Good Afternon</string>
    <string name="night">Good Night</string>
    <string-array name="navigationExamples">
        <item>Select Activity</item>
        <item>E25AndroidSpinner</item>
        <item>E24AndroidVideoView</item>
        <item>E23AndroidWebView</item>
        <item>E22AndroidScrollView</item>
    </string-array>
    <string name="E27AndroidListView">List View[Season 4]</string>
    <string name="channelUrl">https://t.me/kotlincoders</string>
</resources>