<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding20"
            android:text="@string/textChoseLanguage" />


        <CheckBox
            android:id="@+id/checkBoxJava"
            style="@style/checkBoxStyle"
            android:text="@string/java" />

        <CheckBox
            android:id="@+id/checkBoxPython"
            style="@style/checkBoxStyle"
            android:text="@string/python" />

        <CheckBox
            android:id="@+id/checkBoxC"
            style="@style/checkBoxStyle"
            android:text="@string/c" />

        <CheckBox
            android:id="@+id/checkBoxKotlin"
            style="@style/checkBoxStyle"
            android:text="@string/kotlin" />

        <CheckBox
            android:id="@+id/checkBoxPHP"
            style="@style/checkBoxStyle"
            android:text="@string/php" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin48"
            android:layout_marginVertical="@dimen/margin"
            android:text="@string/submit"
            android:drawableRight="@drawable/ic_check_black_24dp"
            android:drawableTint="@color/colorTest"/>

    </LinearLayout>
</ScrollView>
    
    

