<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".E17AndroidToggleButton">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleButtonTitle"
        android:fontFamily="cursive"
        android:textSize="@dimen/_20"
        android:textStyle="bold"
        android:textColor="@color/darkBackground"
        android:layout_margin="@dimen/_10"
        />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:textOn="@string/nightMode"
        android:textOff="@string/dayMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10"
        android:text="@string/toggleButton"/>


</LinearLayout>
</ScrollView>