<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".E07AndroidEventHandling02"
    android:id="@+id/parent"
    android:background="@color/alphaColor"
    >

    <LinearLayout
        android:id="@+id/buttonsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startButton" />

        <Button
            android:id="@+id/toggleColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggleColor" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishButton" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/toggleVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_visibility_off_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin"
        android:tint="@color/buttonTextColor"
        />


</RelativeLayout>